select undefined value fix

--- a/packages/stencil-lib/src/index.html
+++ b/packages/stencil-lib/src/index.html
@@ -329,8 +329,8 @@
       <inno-error type="badInput">Not valid</inno-error>
     </inno-input>
     <inno-select label="Select">
-      <inno-select-item value="124">4321</inno-select-item>
-      <inno-select-item value="124321">431</inno-select-item>
+      <inno-select-item value="124" label="1234"></inno-select-item>
+      <inno-select-item value="124321" label ="1342"></inno-select-item>
     </inno-select>
 
     <inno-footer id="in-footer-dark" variant="dark" copyright="@ Innomotics 2024"></inno-footer>
