--- a/packages/stencil-lib/src/index.html
+++ b/packages/stencil-lib/src/index.html
@@ -176,10 +176,10 @@
       <input type="number" />
       <inno-error type="badInput">Not valid</inno-error>
     </inno-input>
-    <inno-select label="Select">
+    <!-- <inno-select label="Select">
       <inno-select-item value="124">4321</inno-select-item>
       <inno-select-item value="124321">431</inno-select-item>
-    </inno-select>
+    </inno-select> -->
   <body>
     <div style="display: flex; flex-direction: row; gap: 20px; margin-bottom: 15px">
       <div style="display: flex; flex-direction: column; gap: 10px; padding: 10px">
@@ -337,43 +337,36 @@
 
     <inno-footer variant="dark" copyright="@ Innomotics 2024">
       <inno-footer-item>
-        <a>Corporate Information</a>
+        <inno-button variant="secondary" icon="arrow-right" color-variant="light">tertiary button</inno-button>
       </inno-footer-item>
-      <inno-footer-item>
-        <a>Privacy Notice</a>
-      </inno-footer-item>
-      <inno-footer-item>
-        <a>Cookie Notice</a>
-      </inno-footer-item>
-      <inno-footer-item>
-        <a>Term of use</a>
-      </inno-footer-item>
-      <inno-footer-item>
-        <a>Whistleblowing</a>
-      </inno-footer-item>
-      <inno-footer-item>
-        <inno-icon icon="about" theme="dark"></inno-icon>
-      </inno-footer-item>
+      <inno-footer-item><p>Corporate Information</p></inno-footer-item>
+      <inno-footer-item><a>Corporate Information</a></inno-footer-item>
+      <inno-footer-item><a>Corporate Information</a></inno-footer-item>
+      <inno-footer-item><a>Corporate Information</a></inno-footer-item>
+      <inno-footer-item><a>Corporate Information</a></inno-footer-item>
+      <inno-footer-item><a>Corporate Information</a></inno-footer-item>
+      <inno-footer-item><a>Corporate Information</a></inno-footer-item>
+      <inno-footer-item><a>Corporate Information</a></inno-footer-item>
+      <inno-footer-item><a>Corporate Information</a></inno-footer-item>
+      <inno-footer-item><a>Corporate Information</a></inno-footer-item>
+      <inno-footer-item><a>Privacy Notice</a></inno-footer-item>
+      <inno-footer-item><a>Cookie Notice</a></inno-footer-item>
+      <inno-footer-item><a>Term of use</a></inno-footer-item>
+      <inno-footer-item><a>Whistleblowing</a></inno-footer-item>
+      <inno-footer-item><inno-icon icon="about" theme="dark"></inno-icon></inno-footer-item>
     </inno-footer>
 
     <div class="separator-dummy">separator dummy</div>
 
     <inno-footer variant="light" copyright="@ Innomotics 2024">
       <inno-footer-item>
-        <a>Corporate Information</a>
+        <inno-button variant="secondary" icon="arrow-right" color-variant="light">tertiary button</inno-button>
       </inno-footer-item>
-      <inno-footer-item>
-        <a>Privacy Notice</a>
-      </inno-footer-item>
-      <inno-footer-item>
-        <a>Cookie Notice</a>
-      </inno-footer-item>
-      <inno-footer-item>
-        <a>Term of use</a>
-      </inno-footer-item>
-      <inno-footer-item>
-        <a>Whistleblowing</a>
-      </inno-footer-item>
+      <inno-footer-item><a>Corporate Information</a></inno-footer-item>
+      <inno-footer-item><a>Privacy Notice</a></inno-footer-item>
+      <inno-footer-item><a>Cookie Notice</a></inno-footer-item>
+      <inno-footer-item><a>Term of use</a></inno-footer-item>
+      <inno-footer-item><a>Whistleblowing</a></inno-footer-item>
       <inno-footer-item>
         <inno-icon icon="about" theme="dark"></inno-icon>
       </inno-footer-item>
