--- a/packages/stencil-lib/src/index.html
+++ b/packages/stencil-lib/src/index.html
@@ -14,16 +14,9 @@
         border: 1px solid black;
         margin: 5px;
       }
-    </style>
-  </head>
-    <script type="module" src="/build/innomotics-ix.esm.js"></script>
-    <script nomodule src="/build/innomotics-ix.js"></script>
-    <link href="/build/innomotics-ix.css" rel="stylesheet" />
 
-    <style>
-      .separator-dummy {
-        border: 1px solid black;
-        margin: 5px;
+      [data-inno-footer-item-style="dark"] {
+        color: red;
       }
     </style>
   </head>
@@ -176,10 +169,10 @@
       <input type="number" />
       <inno-error type="badInput">Not valid</inno-error>
     </inno-input>
-    <!-- <inno-select label="Select">
+    <inno-select label="Select">
       <inno-select-item value="124">4321</inno-select-item>
       <inno-select-item value="124321">431</inno-select-item>
-    </inno-select> -->
+    </inno-select>
   <body>
     <div style="display: flex; flex-direction: row; gap: 20px; margin-bottom: 15px">
       <div style="display: flex; flex-direction: column; gap: 10px; padding: 10px">
@@ -328,17 +321,18 @@
       <input type="number" />
       <inno-error type="badInput">Not valid</inno-error>
     </inno-input>
-    <!-- <inno-select label="Select">
+    <inno-select label="Select">
       <inno-select-item value="124">4321</inno-select-item>
       <inno-select-item value="124321">431</inno-select-item>
-    </inno-select> -->
+    </inno-select>
 
     <div class="separator-dummy">separator dummy</div>
 
     <inno-footer variant="dark" copyright="@ Innomotics 2024">
-      <inno-footer-item>
+      <!-- <inno-footer-item>
         <inno-button variant="secondary" icon="arrow-right" color-variant="light">tertiary button</inno-button>
-      </inno-footer-item>
+      </inno-footer-item> -->
+      <inno-footer-item><div>attribute?</div></inno-footer-item>
       <inno-footer-item><p>Corporate Information</p></inno-footer-item>
       <inno-footer-item><a>Corporate Information</a></inno-footer-item>
       <inno-footer-item><a>Corporate Information</a></inno-footer-item>
@@ -349,6 +343,10 @@
       <inno-footer-item><a>Corporate Information</a></inno-footer-item>
       <inno-footer-item><a>Corporate Information</a></inno-footer-item>
       <inno-footer-item><a>Corporate Information</a></inno-footer-item>
+      <inno-footer-item><inno-icon icon="applications" theme="dark"></inno-icon></inno-footer-item>
+      <inno-footer-item><inno-icon icon="car" theme="dark"></inno-icon></inno-footer-item>
+      <inno-footer-item><inno-icon icon="capture" theme="dark"></inno-icon></inno-footer-item>
+      <inno-footer-item><inno-icon icon="cloud-filled" theme="dark"></inno-icon></inno-footer-item>
       <inno-footer-item><a>Privacy Notice</a></inno-footer-item>
       <inno-footer-item><a>Cookie Notice</a></inno-footer-item>
       <inno-footer-item><a>Term of use</a></inno-footer-item>
@@ -359,9 +357,9 @@
     <div class="separator-dummy">separator dummy</div>
 
     <inno-footer variant="light" copyright="@ Innomotics 2024">
-      <inno-footer-item>
-        <inno-button variant="secondary" icon="arrow-right" color-variant="light">tertiary button</inno-button>
-      </inno-footer-item>
+      <!-- <inno-footer-item>
+        <inno-button variant="secondary" icon="arrow-right" color-variant="dark">tertiary button</inno-button>
+      </inno-footer-item> -->
       <inno-footer-item><a>Corporate Information</a></inno-footer-item>
       <inno-footer-item><a>Privacy Notice</a></inno-footer-item>
       <inno-footer-item><a>Cookie Notice</a></inno-footer-item>
