input dark style fix

--- a/packages/stencil-lib/src/index.html
+++ b/packages/stencil-lib/src/index.html
@@ -321,6 +321,12 @@
       <input type="number" />
       <inno-error type="badInput">Not valid</inno-error>
     </inno-input>
+
+    <inno-input label="Power" variant="dark">
+      <input type="number" />
+      <inno-error type="badInput">Not valid</inno-error>
+    </inno-input>
+
     <inno-select label="Select">
       <inno-select-item value="124">4321</inno-select-item>
       <inno-select-item value="124321">431</inno-select-item>
