--- a/packages/stencil-lib/src/index.html
+++ b/packages/stencil-lib/src/index.html
@@ -32,6 +32,10 @@
         <inno-toggle variant="light" disabled></inno-toggle>
       </div>
     </div>
+    <div>
+      <inno-loader size="88"></inno-loader>
+    </div>
+  
     <span id="onclickspan" style="background-color: black; color: white">tooltip on click</span>
     <span id="onhoverspan" style="background-color: black; color: white">tooltip on hover</span>
     <span id="manualspan" style="background-color: black; color: white">manual tooltip, click on the button --&gt;</span>
