--- a/packages/stencil-lib/src/index.html
+++ b/packages/stencil-lib/src/index.html
@@ -257,6 +257,73 @@
         <inno-checkbox label="error" checked="true" variant="dark" required class="ng-invalid"></inno-checkbox>
       </div>
     </div>
+
+    <div style="padding: 20px; background-color: white; display: flex; flex-direction: column">
+      <div>
+        <inno-radio label="Label" checked="true" variant="light"></inno-radio>
+      </div>
+      <div>
+        <inno-radio label="readonly" checked="true" variant="light" readonly></inno-radio>
+      </div>
+      <div>
+        <inno-radio label="disabled" checked="true" variant="light" disabled></inno-radio>
+      </div>
+      <div>
+        <inno-radio label="required" checked="true" variant="light" required></inno-radio>
+      </div>
+      <div>
+        <inno-radio label="error" checked="true" variant="light" required class="ng-invalid"></inno-radio>
+      </div>
+    </div>
+
+    <div style="padding: 20px; background-color: #08191f; display: flex; flex-direction: column">
+      <div>
+        <inno-radio label="normal" checked="false" variant="dark"></inno-radio>
+      </div>
+      <div>
+        <inno-radio label="readonly" checked="false" variant="dark" readonly></inno-radio>
+
+      </div>
+      <div>
+        <inno-radio label="disabled" checked="false" variant="dark" disabled></inno-radio>
+      </div>
+      <div>
+        <inno-radio label="required" checked="false" variant="dark" required></inno-radio>
+      </div>
+      <div>
+        <inno-radio label="error" checked="false" variant="dark" required class="ng-invalid"></inno-radio>
+      </div>
+    </div>
+
+    <form action="" id="form111">
+    <input type="radio" name="radioGroup1" value="val4" />
+
+    <div>
+     <inno-radio
+     type="radio"
+      name="radioGroup1"
+      label="value1"
+      value="val1"
+    >
+    </inno-radio>
+    <inno-radio
+    type="radio"
+      name="radioGroup1"
+      label="value2"
+      value="val2"
+    >
+    </inno-radio>
+    <inno-radio
+    type="radio"
+      name="radioGroup1"
+      label="value3"
+      value="val3"
+    >
+    </inno-radio>
+
+      <button type="submit">submit</button>
+    </form>
+    </div>
   </body>
   <script>
     const pane1 = document.getElementById('button-showcase');
