--- a/packages/stencil-lib/src/index.html
+++ b/packages/stencil-lib/src/index.html
@@ -322,15 +322,6 @@
     <div class="separator-dummy">separator dummy</div>
 
     <inno-footer variant="dark" copyright="@ Innomotics 2024">
-      <inno-footer-item slot="links"><p>Corporate Information</p></inno-footer-item>
-      <inno-footer-item slot="links"><a>Corporate Information</a></inno-footer-item>
-      <inno-footer-item slot="links"><a>Corporate Information</a></inno-footer-item>
-      <inno-footer-item slot="links"><a>Corporate Information</a></inno-footer-item>
-      <inno-footer-item slot="links"><a>Corporate Information</a></inno-footer-item>
-      <inno-footer-item slot="links"><a>Corporate Information</a></inno-footer-item>
-      <inno-footer-item slot="links"><a>Corporate Information</a></inno-footer-item>
-      <inno-footer-item slot="links"><a>Corporate Information</a></inno-footer-item>
-      <inno-footer-item slot="links"><a>Corporate Information</a></inno-footer-item>
       <inno-footer-item slot="links"><a>Corporate Information</a></inno-footer-item>
       <inno-footer-item slot="links"><a>Privacy Notice</a></inno-footer-item>
       <inno-footer-item slot="links"><a>Cookie Notice</a></inno-footer-item>
@@ -346,14 +337,12 @@
     <div class="separator-dummy">separator dummy</div>
 
     <inno-footer variant="light" copyright="@ Innomotics 2024">
-      <inno-footer-item><a>Corporate Information</a></inno-footer-item>
-      <inno-footer-item><a>Privacy Notice</a></inno-footer-item>
-      <inno-footer-item><a>Cookie Notice</a></inno-footer-item>
-      <inno-footer-item><a>Term of use</a></inno-footer-item>
-      <inno-footer-item><a>Whistleblowing</a></inno-footer-item>
-      <inno-footer-item>
-        <inno-icon icon="about" theme="dark"></inno-icon>
-      </inno-footer-item>
+      <inno-footer-item slot="links"><a>Corporate Information</a></inno-footer-item>
+      <inno-footer-item slot="links"><a>Privacy Notice</a></inno-footer-item>
+      <inno-footer-item slot="links"><a>Cookie Notice</a></inno-footer-item>
+      <inno-footer-item slot="links"><a>Term of use</a></inno-footer-item>
+      <inno-footer-item slot="links"><a>Whistleblowing</a></inno-footer-item>
+      <inno-footer-item  slot="icons"><inno-icon icon="about" theme="dark"></inno-icon></inno-footer-item>
     </inno-footer>
 
     <div class="separator-dummy">separator dummy</div>
