Add inno-footer and inno-checkbox documentation

--- a/packages/stencil-lib/src/index.html
+++ b/packages/stencil-lib/src/index.html
@@ -31,7 +31,7 @@
     <div>
       <inno-loader size="88"></inno-loader>
     </div>
-  
+
     <span id="onclickspan" style="background-color: black; color: white">tooltip on click</span>
     <span id="onhoverspan" style="background-color: black; color: white">tooltip on hover</span>
     <span id="manualspan" style="background-color: black; color: white">manual tooltip, click on the button --&gt;</span>
@@ -330,7 +330,7 @@
       <inno-footer-item slot="links"><a>Privacy Notice</a></inno-footer-item>
       <inno-footer-item slot="links"><a>Cookie Notice</a></inno-footer-item>
       <inno-footer-item slot="links"><a>Term of use</a></inno-footer-item>
-      <inno-footer-item slot="links"><a>Whistleblowing</a></inno-footer-item>
+      <inno-footer-item slot="links"><span>Whistleblowing</span></inno-footer-item>
       <inno-footer-item slot="icons"><inno-icon icon="applications" theme="dark"></inno-icon></inno-footer-item>
       <inno-footer-item slot="icons"><inno-icon icon="car" theme="dark"></inno-icon></inno-footer-item>
       <inno-footer-item slot="icons"><inno-icon icon="capture" theme="dark"></inno-icon></inno-footer-item>
