Add indeterminate state

--- a/packages/stencil-lib/src/index.html
+++ b/packages/stencil-lib/src/index.html
@@ -222,6 +222,24 @@
       </div>
     </div>
 
+    <div style="padding: 20px; background-color: white; display: flex; flex-direction: column">
+      <div>
+        <inno-checkbox label="Label" indeterminate="true" variant="light"></inno-checkbox>
+      </div>
+      <div>
+        <inno-checkbox label="readonly" indeterminate="true" variant="light" readonly></inno-checkbox>
+      </div>
+      <div>
+        <inno-checkbox label="disabled" indeterminate="true" variant="light" disabled></inno-checkbox>
+      </div>
+      <div>
+        <inno-checkbox label="required" indeterminate="true" variant="light" required></inno-checkbox>
+      </div>
+      <div>
+        <inno-checkbox label="error" indeterminate="true" variant="light" required class="ng-invalid"></inno-checkbox>
+      </div>
+    </div>
+
     <div style="padding: 20px; background-color: #08191f; display: flex; flex-direction: column">
       <div>
         <inno-checkbox label="normal" checked="true" variant="dark"></inno-checkbox>
@@ -237,6 +255,24 @@
       </div>
       <div>
         <inno-checkbox label="error" checked="true" variant="dark" required class="ng-invalid"></inno-checkbox>
+      </div>
+    </div>
+
+    <div style="padding: 20px; background-color: #08191f; display: flex; flex-direction: column">
+      <div>
+        <inno-checkbox label="normal" indeterminate="true" variant="dark"></inno-checkbox>
+      </div>
+      <div>
+        <inno-checkbox label="readonly" indeterminate="true" variant="dark" readonly></inno-checkbox>
+      </div>
+      <div>
+        <inno-checkbox label="disabled" indeterminate="true" variant="dark" disabled></inno-checkbox>
+      </div>
+      <div>
+        <inno-checkbox label="required" indeterminate="true" variant="dark" required></inno-checkbox>
+      </div>
+      <div>
+        <inno-checkbox label="error" indeterminate="true" variant="dark" required class="ng-invalid"></inno-checkbox>
       </div>
     </div>
 
