--- a/packages/stencil-lib/src/index.html
+++ b/packages/stencil-lib/src/index.html
@@ -218,7 +218,7 @@
         <inno-checkbox label="required" checked="true" variant="light" required></inno-checkbox>
       </div>
       <div>
-        <inno-checkbox label="error" checked="true" variant="light" required class="ng-invalid"></inno-checkbox>
+        <inno-checkbox label="error" checked="true" variant="light" required error></inno-checkbox>
       </div>
     </div>
 
@@ -236,7 +236,7 @@
         <inno-checkbox label="required" indeterminate="true" variant="light" required></inno-checkbox>
       </div>
       <div>
-        <inno-checkbox label="error" indeterminate="true" variant="light" required class="ng-invalid"></inno-checkbox>
+        <inno-checkbox label="error" indeterminate="true" variant="light" required error></inno-checkbox>
       </div>
     </div>
 
@@ -254,7 +254,7 @@
         <inno-checkbox label="required" checked="true" variant="dark" required></inno-checkbox>
       </div>
       <div>
-        <inno-checkbox label="error" checked="true" variant="dark" required class="ng-invalid"></inno-checkbox>
+        <inno-checkbox label="error" checked="true" variant="dark" required error></inno-checkbox>
       </div>
     </div>
 
