input fix on initial value

--- a/packages/stencil-lib/src/index.html
+++ b/packages/stencil-lib/src/index.html
@@ -160,7 +160,7 @@
         erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus
       </p>
     </inno-pane>
-    <inno-input label="Power" variant="light">
+    <inno-input label="Power" variant="light" value="10">
       <input type="number" />
       <inno-error type="badInput">Not valid</inno-error>
     </inno-input>
