--- a/packages/stencil-lib/src/index.html
+++ b/packages/stencil-lib/src/index.html
@@ -322,6 +322,19 @@
 
       <button type="submit">submit</button>
     </form>
+
+    <div style="position: relative; width: 100%; display: block; background-color: #08191f; padding: 20px; margin-top: 20px">
+      <inno-tab layout="stretched">
+        <inno-tab-item>Tab item 1</inno-tab-item>
+        <inno-tab-item>Tab item 2</inno-tab-item>
+        <inno-tab-item>Tab item 3</inno-tab-item>
+        <inno-tab-item>Tab item 4</inno-tab-item>
+        <inno-tab-item>Tab item 5</inno-tab-item>
+        <inno-tab-item>Tab item 6</inno-tab-item>
+        <inno-tab-item>Tab item 7</inno-tab-item>
+        <inno-tab-item>Tab item 8</inno-tab-item>
+      </inno-tab>
+    </div>
   </body>
   <script>
     const pane1 = document.getElementById('button-showcase');
