--- a/packages/stencil-lib/src/index.html
+++ b/packages/stencil-lib/src/index.html
@@ -324,9 +324,9 @@
     </form>
 
     <div style="position: relative; width: 100%; display: block; background-color: #08191f; padding: 20px; margin-top: 20px">
-      <inno-tab layout="stretched">
+      <inno-tab layout="auto" theme="dark">
         <inno-tab-item>Tab item 1</inno-tab-item>
-        <inno-tab-item>Tab item 2</inno-tab-item>
+        <inno-tab-item disabled>Tab item 2</inno-tab-item>
         <inno-tab-item>Tab item 3</inno-tab-item>
         <inno-tab-item>Tab item 4</inno-tab-item>
         <inno-tab-item>Tab item 5</inno-tab-item>
