cleanup inno-tab

--- a/packages/stencil-lib/src/index.html
+++ b/packages/stencil-lib/src/index.html
@@ -333,6 +333,77 @@
         <inno-tab-item>Tab item 6</inno-tab-item>
         <inno-tab-item>Tab item 7</inno-tab-item>
         <inno-tab-item>Tab item 8</inno-tab-item>
+        <inno-tab-item>Tab item 9</inno-tab-item>
+        <inno-tab-item>Tab item 10</inno-tab-item>
+        <inno-tab-item>Tab item 11</inno-tab-item>
+        <inno-tab-item>Tab item 12</inno-tab-item>
+        <inno-tab-item>Tab item 13</inno-tab-item>
+        <inno-tab-item>Tab item 14</inno-tab-item>
+        <inno-tab-item>Tab item 15</inno-tab-item>
+        <inno-tab-item>Tab item 10</inno-tab-item>
+        <inno-tab-item>Tab item 11</inno-tab-item>
+        <inno-tab-item>Tab item 12</inno-tab-item>
+        <inno-tab-item>Tab item 13</inno-tab-item>
+        <inno-tab-item>Tab item 14</inno-tab-item>
+        <inno-tab-item>Tab item 15</inno-tab-item>
+        <inno-tab-item>Tab item 10</inno-tab-item>
+        <inno-tab-item>Tab item 11</inno-tab-item>
+        <inno-tab-item>Tab item 12</inno-tab-item>
+        <inno-tab-item>Tab item 13</inno-tab-item>
+        <inno-tab-item>Tab item 14</inno-tab-item>
+        <inno-tab-item>Tab item 15</inno-tab-item>
+      </inno-tab>
+    </div>
+
+    <div style="position: relative; width: 100%; display: block; background-color: #08191f; padding: 20px; margin-top: 20px">
+      <inno-tab layout="stretched" theme="dark">
+        <inno-tab-item>Tab item 1</inno-tab-item>
+        <inno-tab-item>Tab item 2</inno-tab-item>
+        <inno-tab-item>Tab item 3</inno-tab-item>
+        <inno-tab-item>Tab item 4</inno-tab-item>
+        <inno-tab-item>Tab item 5</inno-tab-item>
+      </inno-tab>
+    </div>
+
+    <div style="position: relative; width: 100%; display: block; background-color: white; padding: 20px; margin-top: 20px">
+      <inno-tab layout="auto" theme="light">
+        <inno-tab-item>Tab item 1</inno-tab-item>
+        <inno-tab-item disabled>Tab item 2</inno-tab-item>
+        <inno-tab-item>Tab item 3</inno-tab-item>
+        <inno-tab-item>Tab item 4</inno-tab-item>
+        <inno-tab-item>Tab item 5</inno-tab-item>
+        <inno-tab-item>Tab item 6</inno-tab-item>
+        <inno-tab-item>Tab item 7</inno-tab-item>
+        <inno-tab-item>Tab item 8</inno-tab-item>
+        <inno-tab-item>Tab item 9</inno-tab-item>
+        <inno-tab-item>Tab item 10</inno-tab-item>
+        <inno-tab-item>Tab item 11</inno-tab-item>
+        <inno-tab-item>Tab item 12</inno-tab-item>
+        <inno-tab-item>Tab item 13</inno-tab-item>
+        <inno-tab-item>Tab item 14</inno-tab-item>
+        <inno-tab-item>Tab item 15</inno-tab-item>
+        <inno-tab-item>Tab item 10</inno-tab-item>
+        <inno-tab-item>Tab item 11</inno-tab-item>
+        <inno-tab-item>Tab item 12</inno-tab-item>
+        <inno-tab-item>Tab item 13</inno-tab-item>
+        <inno-tab-item>Tab item 14</inno-tab-item>
+        <inno-tab-item>Tab item 15</inno-tab-item>
+        <inno-tab-item>Tab item 10</inno-tab-item>
+        <inno-tab-item>Tab item 11</inno-tab-item>
+        <inno-tab-item>Tab item 12</inno-tab-item>
+        <inno-tab-item>Tab item 13</inno-tab-item>
+        <inno-tab-item>Tab item 14</inno-tab-item>
+        <inno-tab-item>Tab item 15</inno-tab-item>
+      </inno-tab>
+    </div>
+
+    <div style="position: relative; width: 100%; display: block; background-color: white; padding: 20px; margin-top: 20px">
+      <inno-tab layout="stretched" theme="light">
+        <inno-tab-item>Tab item 1</inno-tab-item>
+        <inno-tab-item disabled>Tab item 2</inno-tab-item>
+        <inno-tab-item>Tab item 3</inno-tab-item>
+        <inno-tab-item>Tab item 4</inno-tab-item>
+        <inno-tab-item>Tab item 5</inno-tab-item>
       </inno-tab>
     </div>
   </body>
