standardizing webdoc components displaying

--- a/packages/stencil-lib/src/index.html
+++ b/packages/stencil-lib/src/index.html
@@ -169,7 +169,13 @@
       <inno-select-item value="124321">431</inno-select-item>
     </inno-select>
     <h1>breadcrumb</h1>
-    <inno-breadcrumb>
+    <inno-breadcrumb variant="light">
+      <inno-breadcrumb-item label="product & services"></inno-breadcrumb-item>
+      <inno-breadcrumb-item label="drive technology"></inno-breadcrumb-item>
+      <inno-breadcrumb-item label="Minimum-Efficiency-Performance-Standard"></inno-breadcrumb-item>
+      <inno-breadcrumb-item label="European union"></inno-breadcrumb-item>
+    </inno-breadcrumb>
+    <inno-breadcrumb variant="dark" style="background-color: #08191f;">
       <inno-breadcrumb-item label="product & services"></inno-breadcrumb-item>
       <inno-breadcrumb-item label="drive technology"></inno-breadcrumb-item>
       <inno-breadcrumb-item label="Minimum-Efficiency-Performance-Standard"></inno-breadcrumb-item>
