Added progressbar component.

--- a/packages/stencil-lib/src/index.html
+++ b/packages/stencil-lib/src/index.html
@@ -322,6 +322,12 @@
 
       <button type="submit">submit</button>
     </form>
+
+    <div class="progress-bars" style="display: block; padding-top: 20px;">
+      <button id="progressRandomizer">Randomize progress!</button>
+      <inno-progress-bar style="margin-bottom: 10px;" progress-percentage="50" progress-text="your progress text"></inno-progress-bar>
+      <inno-progress-bar progress-text="your progress text" progress-percentage="50" percentage-precision="2" trailing-zeroes="true" variant="dark"></inno-progress-bar>
+    </div>
   </body>
   <script>
     const pane1 = document.getElementById('button-showcase');
@@ -368,6 +374,13 @@
       const formData = new FormData(event.target);
       const formProps = Object.fromEntries(formData);
       console.log(formProps);
+    });
+
+    const randomizerBtn = document.getElementById('progressRandomizer');
+    randomizerBtn.addEventListener('click', () => {
+      document.querySelectorAll("inno-progress-bar").forEach(el => {
+        el.progressPercentage=Math.random()*100;
+      });
     });
   </script>
 </html>
