icon driven select

--- a/packages/stencil-lib/src/index.html
+++ b/packages/stencil-lib/src/index.html
@@ -165,8 +165,12 @@
       <inno-error type="badInput">Not valid</inno-error>
     </inno-input>
     <inno-select label="Select">
-      <inno-select-item value="124">4321</inno-select-item>
-      <inno-select-item value="124321">431</inno-select-item>
+      <inno-select-item value="124" label="Hello"></inno-select-item>
+      <inno-select-item value="124321" label="Bello"></inno-select-item>
+    </inno-select>
+    <inno-select label="SelectIcon" icon="home">
+      <inno-select-item value="124" label="Hello" icon="home"></inno-select-item>
+      <inno-select-item value="124321" label="Bello" icon="back"></inno-select-item>
     </inno-select>
     <h1>breadcrumb</h1>
     <inno-breadcrumb variant="light">
