add inno-modal react

--- a/packages/stencil-lib/src/index.html
+++ b/packages/stencil-lib/src/index.html
@@ -19,9 +19,9 @@
 
   <body>
     <inno-modal id="innomodal1">
-      <inno-modal-header></inno-modal-header>
-      <inno-modal-content>This is a non-critical modal</inno-modal-content>
-      <inno-modal-footer>
+      <inno-modal-header>Modal title</inno-modal-header>
+      <inno-modal-content style="color: white; padding: 20px">This is a non-critical modal</inno-modal-content>
+      <inno-modal-footer style="display: flex; justify-content: flex-end; gap: 20px">
         <inno-button colorVariant="light" variant="secondary"> Close </inno-button>
         <inno-button colorVariant="light" variant="primary"> Accept </inno-button>
       </inno-modal-footer>
